<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <com.example.sarthak.sanuti.Activities.customviews.PlainTextView
        android:id="@+id/control_gender"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginStart="5dp"
        android:padding="@dimen/normal_margin"
        android:text="@string/interested_in"
        android:textSize="@dimen/small_text" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/control_gender"
        android:layout_marginLeft="5dp"
        android:layout_marginStart="5dp">

        <RadioGroup
            android:id="@+id/radioSex"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/radioMale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="@color/colorPrimary"
                android:checked="true"
                android:text="@string/radioBoth"
                android:textColor="@color/color_text" />

            <RadioButton
                android:id="@+id/radioFemale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="@color/colorPrimary"
                android:text="@string/radio_female"
                android:textColor="@color/color_text" />

            <RadioButton
                android:id="@+id/radioBoth"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="@color/colorPrimary"
                android:text="@string/radio_male"
                android:textColor="@color/color_text" />

        </RadioGroup>

    </RelativeLayout>

</RelativeLayout>
