<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <com.example.sarthak.sanuti.Activities.customviews.PlainTextView
        android:id="@+id/control"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginStart="5dp"
        android:padding="@dimen/normal_margin"
        android:text="@string/control_your_profile"
        android:textSize="@dimen/small_text" />


    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/control"
        android:layout_marginLeft="5dp"
        android:layout_marginStart="5dp">

        <TextView
            android:id="@+id/no_age"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/normal_margin"
            android:paddingTop="@dimen/normal_margin"
            android:text="@string/no_age"
            android:textColor="@color/color_text"
            android:textSize="@dimen/more_small_text" />


        <TextView
            android:id="@+id/no_distance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/no_age"
            android:layout_margin="@dimen/normal_margin"
            android:paddingTop="@dimen/normal_margin"
            android:text="@string/no_dist"
            android:textColor="@color/color_text"
            android:textSize="@dimen/more_small_text" />


        <android.support.v7.widget.SwitchCompat
            android:id="@+id/age_toggle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_margin="@dimen/normal_margin"
            android:checked="false"
            android:theme="@style/MySwitch" />

        <android.support.v7.widget.SwitchCompat
            android:id="@+id/distance_toggle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/age_toggle"
            android:layout_margin="@dimen/normal_margin"
            android:checked="false"
            android:theme="@style/MySwitch" />
    </RelativeLayout>

</RelativeLayout>
